--- a/1_Fetching_the_data_eda.ipynb
+++ b/1_Fetching_the_data_eda.ipynb
@@ -493,11 +493,18 @@
     "#import the data from a csv-file\n",
     "df_import = pd.read_csv('data/eda.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('.venv': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -511,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
